--- a/SimplePinger/PingerAvaloniaApp/App.axaml
+++ b/SimplePinger/PingerAvaloniaApp/App.axaml
@@ -1,6 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="PingerAvaloniaApp.App">
+             x:Class="PingerAvaloniaApp.App" RequestedThemeVariant="Dark">
     <Application.Styles>
         <FluentTheme />
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
