--- a/Chat/ChatDesktopApp/Views/MainWindow.axaml
+++ b/Chat/ChatDesktopApp/Views/MainWindow.axaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="ChatDesktopApp.Views.MainWindow"
         Icon="/Assets/cognibase-logo.ico"
-        Title="Cognibase App">
+        Title="Chat App">
         <views:MainView x:Name="mainView"/>
 </Window>
