--- a/Chat/ChatDesktopApp/Views/MainView.axaml
+++ b/Chat/ChatDesktopApp/Views/MainView.axaml
@@ -14,8 +14,17 @@
 
 
 	<DockPanel>
-		<Grid DockPanel.Dock="Left" >
-			<ScrollViewer VerticalScrollBarVisibility="Visible" >
+		<Grid DockPanel.Dock="Left" RowDefinitions="80,*" Width="200" >
+			<StackPanel Orientation="Vertical" Grid.Row="0" >
+				<TextBox Margin="5" Width="190"
+						 HorizontalAlignment="Stretch"
+					  Text="{Binding NewRoomText}" />
+				<Button Width="190" Margin="5"
+				   HorizontalAlignment="Right"
+					HorizontalContentAlignment="Center"
+					Command="{Binding CreateRoomCommand}">Create/Join Room</Button>
+			</StackPanel>
+			<ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Visible" >
 				<ListBox ItemsSource="{Binding CurrentUser.ChatRooms}" SelectedItem="{Binding SelectedChatRoom}" >
 					<ListBox.ItemTemplate>
 						<DataTemplate>
@@ -36,7 +45,7 @@
 							<StackPanel Orientation="Horizontal">
 								<TextBlock Margin="4" Grid.Column="0"
 									  Text="{Binding Author.Username}" />
-								<TextBlock Margin="4" Grid.Column="0"> : </TextBlock>
+								<TextBlock Margin="4" Grid.Column="0">: </TextBlock>
 								<TextBlock Margin="4" Grid.Column="0"
 									  Text="{Binding Text}" />
 							</StackPanel>
@@ -45,10 +54,10 @@
 				</ListBox>
 			</ScrollViewer>
 			<Grid Grid.Row="1" ColumnDefinitions="*,100">
-				<TextBox AcceptsReturn="True" 
+				<TextBox AcceptsReturn="True" Margin="5"
 				 Text="{Binding NewMessageText}"
 				 Watermark="Enter your to do item"/>
-				<Button Grid.Column="1"
+				<Button Grid.Column="1" Margin="5"
 					HorizontalAlignment="Stretch"
 					HorizontalContentAlignment="Center"
 					Command="{Binding SendMessageCommand}">Send</Button>
