--- a/Todo/TodoApp/Views/MainView.axaml
+++ b/Todo/TodoApp/Views/MainView.axaml
@@ -6,41 +6,45 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="TodoApp.Views.MainView"
              x:DataType="vm:MainViewModel">
-  <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
+    <Design.DataContext>
+        <!-- This only sets the DataContext for the previewer in an IDE,
          to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <vm:MainViewModel />
-  </Design.DataContext>
+        <vm:MainViewModel />
+    </Design.DataContext>
 
-	<DockPanel>
-		<Button DockPanel.Dock="Bottom"
-				HorizontalAlignment="Stretch"
-				HorizontalContentAlignment="Center"
-				Command="{Binding $parent[Window].AddEditItemCommand}">
-			Add Item
-		</Button>
-		<ScrollViewer VerticalScrollBarVisibility="Visible">
-			<ItemsControl ItemsSource="{Binding ListItems}" >
-				<ItemsControl.ItemTemplate>
-					<DataTemplate>
-						<Grid ColumnDefinitions="*,30, 50">
-							<CheckBox Margin="4" Grid.Column="0"
-								  IsChecked="{Binding IsChecked}"
-								  Content="{Binding Description}"
-								  Command="{Binding $parent[ItemsControl].((vm:MainViewModel)DataContext).WriteItemCheckCommand}"
-								  CommandParameter="{Binding}"/>
-							<Button Grid.Column="1" Background="Transparent" 
-								  Command="{Binding $parent[Window].AddEditItemCommand}"
-								  CommandParameter="{Binding}" HorizontalAlignment="Left" HorizontalContentAlignment="Left"
-									>...</Button>
-							<Button Grid.Column="2" Background="Transparent"
-								  Command="{Binding $parent[Window].DeleteItemCommand}"
-								  CommandParameter="{Binding}" HorizontalAlignment="Left" HorizontalContentAlignment="Left"
-									>x</Button>
-						</Grid>
-					</DataTemplate>
-				</ItemsControl.ItemTemplate>
-			</ItemsControl>
-		</ScrollViewer>
-	</DockPanel>
+    <DockPanel>
+        <Button DockPanel.Dock="Bottom"
+                HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Center"
+                Command="{Binding $parent[Window].AddEditItemCommand}">
+            Add Item
+        </Button>
+        <ScrollViewer VerticalScrollBarVisibility="Visible">
+            <ItemsControl ItemsSource="{Binding ListItems}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid ColumnDefinitions="*,30, 50">
+                            <CheckBox Margin="4" Grid.Column="0"
+                                      IsChecked="{Binding IsChecked}"
+                                      Content="{Binding Description}"
+                                      Command="{Binding $parent[ItemsControl].((vm:MainViewModel)DataContext).WriteItemCheckCommand}"
+                                      CommandParameter="{Binding}" />
+                            <Button Grid.Column="1" Background="Transparent"
+                                    Command="{Binding $parent[Window].AddEditItemCommand}"
+                                    CommandParameter="{Binding}" HorizontalAlignment="Left"
+                                    HorizontalContentAlignment="Left">
+                                ...
+                            </Button>
+                            <Button Grid.Column="2" Background="Transparent"
+                                    Command="{Binding $parent[Window].DeleteItemCommand}"
+                                    CommandParameter="{Binding}" HorizontalAlignment="Left"
+                                    HorizontalContentAlignment="Left">
+                                x
+                            </Button>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
+    </DockPanel>
 </UserControl>
