--- a/Todo/TodoApp/Views/MainView.axaml
+++ b/Todo/TodoApp/Views/MainView.axaml
@@ -27,18 +27,18 @@
                             <CheckBox Margin="4" Grid.Column="0"
                                       IsChecked="{Binding IsChecked}"
                                       Content="{Binding Description}"
-                                      Command="{Binding $parent[ItemsControl].((vm:MainViewModel)DataContext).WriteItemCheckCommand}"
+                                      Command="{Binding $parent[ItemsControl].DataContext.WriteItemCheckCommand}"
                                       CommandParameter="{Binding}" />
                             <Button Grid.Column="1" Background="Transparent"
                                     Command="{Binding $parent[Window].AddEditItemCommand}"
                                     CommandParameter="{Binding}" HorizontalAlignment="Left"
-                                    HorizontalContentAlignment="Left">
+                                    HorizontalContentAlignment="Left" ToolTip.Tip="Edit">
                                 ...
                             </Button>
                             <Button Grid.Column="2" Background="Transparent"
-                                    Command="{Binding $parent[Window].DeleteItemCommand}"
+                                    Command="{Binding $parent[ItemsControl].DataContext.DeleteItemCommand}"
                                     CommandParameter="{Binding}" HorizontalAlignment="Left"
-                                    HorizontalContentAlignment="Left">
+                                    HorizontalContentAlignment="Left" ToolTip.Tip="Delete">
                                 x
                             </Button>
                         </Grid>
