--- a/Todo/TodoApp/Views/HomeView.axaml
+++ b/Todo/TodoApp/Views/HomeView.axaml
@@ -4,47 +4,47 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:TodoApp.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="TodoApp.Views.MainView"
-             x:DataType="vm:MainViewModel">
+             x:Class="TodoApp.Views.HomeView"
+             x:DataType="vm:HomeViewModel">
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
          to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainViewModel />
+        <vm:HomeViewModel />
     </Design.DataContext>
-
-    <DockPanel>
-        <Button DockPanel.Dock="Bottom"
-                HorizontalAlignment="Stretch"
-                HorizontalContentAlignment="Center"
-                Command="{Binding $parent[Window].AddEditItemCommand}">
-            Add Item
-        </Button>
-        <ScrollViewer VerticalScrollBarVisibility="Visible">
-            <ItemsControl ItemsSource="{Binding ListItems}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Grid ColumnDefinitions="*,30, 50">
-                            <CheckBox Margin="4" Grid.Column="0"
+	<Grid RowDefinitions="*,30,30">		
+		<ScrollViewer VerticalScrollBarVisibility="Visible">
+			<ItemsControl ItemsSource="{Binding ListItems}">
+				<ItemsControl.ItemTemplate>
+					<DataTemplate>
+						<Grid ColumnDefinitions="*,30, 50">
+							<CheckBox Margin="4" Grid.Column="0"
                                       IsChecked="{Binding IsChecked}"
                                       Content="{Binding Description}"
                                       Command="{Binding $parent[ItemsControl].DataContext.WriteItemCheckCommand}"
                                       CommandParameter="{Binding}" />
-                            <Button Grid.Column="1" Background="Transparent"
+							<Button Grid.Column="1" Background="Transparent"
                                     Command="{Binding $parent[Window].AddEditItemCommand}"
                                     CommandParameter="{Binding}" HorizontalAlignment="Left"
                                     HorizontalContentAlignment="Left" ToolTip.Tip="Edit">
-                                ...
-                            </Button>
-                            <Button Grid.Column="2" Background="Transparent"
+								...
+							</Button>
+							<Button Grid.Column="2" Background="Transparent"
                                     Command="{Binding $parent[ItemsControl].DataContext.DeleteItemCommand}"
                                     CommandParameter="{Binding}" HorizontalAlignment="Left"
                                     HorizontalContentAlignment="Left" ToolTip.Tip="Delete">
-                                x
-                            </Button>
-                        </Grid>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
-    </DockPanel>
+								x
+							</Button>
+						</Grid>
+					</DataTemplate>
+				</ItemsControl.ItemTemplate>
+			</ItemsControl>
+		</ScrollViewer>
+		<Button Grid.Row="1"
+						HorizontalAlignment="Stretch"
+						HorizontalContentAlignment="Center"
+						Command="{Binding $parent[Window].AddEditItemCommand}">
+			Add Item
+		</Button>
+		<TextBlock x:Name="errorBox" Grid.Row="2" Text="{Binding ErrorText}"/>
+	</Grid>
 </UserControl>
