--- a/SimplePinger/PingerWpfApp/MainWindow.xaml
+++ b/SimplePinger/PingerWpfApp/MainWindow.xaml
@@ -1,23 +1,57 @@
-﻿<Window x:Class="PingerApp.MainWindow"
+﻿<Window x:Class="PingerWpfApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
+        xmlns:local="clr-namespace:PingerWpfApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <local:StatusValueConverter x:Key="statusValueConverter" />
+    </Window.Resources>
     <Grid>
-        <DataGrid Name="dgTaskList" AutoGenerateColumns="False">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <Menu>
+            <MenuItem Header="_Device">
+                <MenuItem x:Name="menuAdd" Header="_Add" />
+                <Separator />
+                <MenuItem x:Name="menuEdit" Header="_Edit" />
+                <Separator />
+                <MenuItem Command="{Binding RemoveDeviceCommand}" Header="_Delete" />
+            </MenuItem>
+        </Menu>
+        <DataGrid Grid.Row="1" x:Name="devicesGrid" IsReadOnly="True" ItemsSource="{Binding Devices}"
+          SelectedItem="{Binding SelectedDevice}" AutoGenerateColumns="False"
+          VerticalScrollBarVisibility="Visible">
             <DataGrid.Columns>
-                <DataGridTemplateColumn Width="SizeToCells" IsReadOnly="True">
+                <DataGridTemplateColumn Header="Status"
+                                Width="1.5*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Image Source="{Binding TaskPriorityImg}" Stretch="None" />
+                            <Image Width="20" Height="20"
+                           Source="{Binding PingResult, Converter={StaticResource statusValueConverter}}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="Title" Binding="{Binding TaskTitle}" />
-                <DataGridTextColumn Header="Due On" Binding="{Binding DueOn}" />
+                <DataGridTextColumn Header="Name"
+                            Binding="{Binding Name}"
+                            Width="1.5*" />
+                <DataGridTextColumn Header="Host"
+                            Binding="{Binding Host}"
+                            Width="1.5*" />
+                <DataGridTextColumn Header="Ping Interval"
+                            Binding="{Binding PingInterval}"
+                            Width="1.5*" />
             </DataGrid.Columns>
         </DataGrid>
+        <lvc:CartesianChart Grid.Row="2"
+                    Series="{Binding Series}"
+                    YAxes="{Binding YAxes}"
+                    XAxes="{Binding XAxes}" />
     </Grid>
 </Window>
